--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
