feat: listed video based on slug

--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "@vime/core": "^5.4.1",
+    "@vime/react": "^5.4.1",
     "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
